# gaime

./: .cursorignore  .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  env.example  mkdocs.yml  pyproject-builder.toml  requirements-docs.txt
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  audio.py  builder.py  engine.py  game.py
backend/app/engine/: __init__.py  __main__.py  actions.py  parser.py  protocols.py  state.py  two_phase.py  two_phase_state.py  validator.py  visibility.py  world.py
backend/app/engine/classic/: __init__.py  models.py  processor.py  state.py
backend/app/engine/two_phase/: __init__.py  parser.py  processor.py  state.py  visibility.py
backend/app/engine/validators/: __init__.py  examine.py  movement.py  take.py
backend/app/llm/: __init__.py  client.py  game_master.py  image_generator.py  interactor.py  narrator.py  prompt_loader.py  session_logger.py  style_loader.py  world_builder.py
backend/app/llm/classic/: __init__.py  game_master.py
backend/app/llm/prompts/: README.md
backend/app/llm/two_phase/: __init__.py  interactor.py  narrator.py
backend/app/models/: __init__.py  event.py  game.py  intent.py  two_phase_state.py  validation.py  world.py
backend/scripts/: run_e2e_tests.sh
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: __init__.py  test_two_phase_llm.py
backend/tests/fixtures/test_world/: items.yaml  locations.yaml  npcs.yaml  world.yaml
backend/tests/integration/: test_two_phase_processor.py
backend/tests/mocks/: llm.py
backend/tests/unit/: __init__.py
backend/tests/unit/test_api/: test_engine_selection.py
backend/tests/unit/test_engine/: __init__.py  test_browse_handler.py  test_destination_reveal.py  test_examine_handler.py  test_examine_validator.py  test_movement_validator.py  test_parser.py  (+3 more)
gaime_builder/: __init__.py  __main__.py  app.py  pyproject.toml
gaime_builder/core/: __init__.py  image_generator.py  llm_client.py  prompt_loader.py  schema_generator.py  style_loader.py  tasks.py  world_analyzer.py  world_fixer.py  world_generator.py
gaime_builder/screens/: __init__.py  create_world.py  main_menu.py  manage_images.py  manage_worlds.py  style_tester.py
gaime_builder/utils/: __init__.py
gaime_builder/widgets/: __init__.py
(+402 files in other folders)
